# Anhui-Province-Robot-Competition-Algorithm-Design-Track-

./: CMakeLists.txt  LICENSE  README.md  Tasks.cpp  Tasks.h
include/: allocator.hpp  brake_distance.h  caching_technology.h  delivery_plan.h  energy_classification.h  fast_charging.h  gear_calibration.h  independent_service.h  journey_endurance.h  keep_health.h  line_optimization.h  memory_pool.hpp  small_string.hpp  timer.hpp
src/: brake_distance.cpp  caching_technology.cpp  delivery_plan.cpp  energy_classification.cpp  fast_charging.cpp  gear_calibration.cpp  independent_service.cpp  journey_endurance.cpp  keep_health.cpp  line_optimization.cpp
waited/: independent_service.cpp  independent_service.h  journey_endurance.cpp  journey_endurance.h  keep_health.cpp  keep_health.h  line_optimization.cpp  line_optimization.h
